feat: complete realtimepage

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,17 @@ input:focus,
 textarea:focus {
   outline: none;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 
 .description-lime-clamp {
   overflow: hidden;
